# skysolve-next

./: .gitignore  EXAMPLE.env  OPTIMIZATION.md  README.md  copilot-instructions.md  pyproject.toml  test_logging_setup.py  test_logs_directly.py  test_web_app_http.py  validate_api.py
.github/instructions/: copilot-instructions.md  skysolve.instructions.md
avahi/: skysolve-next-http.service  skysolve-next-lx200.service
deploy/: skysolve-web.service  skysolve-worker.service
docs/: API_ENDPOINT_TESTING.md  DEPLOY_PI.md  OPTIMIZATION_ANALYSIS.md  SKYSOLVE_NEXT_IMPLEMENTATION_PLAN.md  SKYSOLVE_UI_PRD.md  api.md  camera_capture_requirements.md  skysolve_gap_analysis_2025-09-02.md  skysolve_prd_v5_onstep_sync.md  skysolve_prd_v7_consolidated.md
scripts/: README.md  deploy_pi.sh  deploy_production.sh  dev_setup.sh  download_astrometry_series.sh  install.sh  local_dev_setup.sh  toggle_services.sh
services/: skysolve-next-web.service  skysolve-next.service
skysolve_next/: settings.json
skysolve_next.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
skysolve_next/core/: config.py  logging_config.py  models.py
skysolve_next/logs/: .gitkeep  shared_logs.jsonl
skysolve_next/publish/: lx200_server.py
skysolve_next/solver/: astrometry_solver.py  base.py  tetra3_solver.py
skysolve_next/web/: app.py  worker_status.json
tests/: test_api_endpoints.py  test_app_solve.py  test_camera_capture.py  test_endpoint_integration.py  test_frontend_solve.py  test_log_parsing.py  test_log_rotation.py  test_logging.py  test_settings.py  test_worker_queue.py
(+4 files in other folders)
