[project]
name = "skysolve-next"
version = "0.1.0"
description = "Skysolve Next: Raspberry Pi capture → plate solve → OnStep sync, with FastAPI web UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "numpy>=1.26",
  "opencv-python-headless>=4.10",
  "starlette>=0.38",
  "websockets>=12.0",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "psutil>=6.0",
  "gpiozero>=2.0; platform_system=='Linux'",
  "picamera2; platform_system=='Linux'",
  "cedar-solve==0.5.1; platform_system=='Linux'",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skysolve_next*"]
exclude = ["tests*", "services*", "avahi*", "scripts*", "docs*"]

[tool.setuptools.package-data]
skysolve_next = ["web/templates/*", "web/static/*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
